# bdat-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: murmur.rs  scramble.rs
docs/: LEGACY.md  MODERN.md
src/: de.rs  error.rs  hash.rs  label.rs  lib.rs  read.rs  serde.rs  types.rs
src/io/: detect.rs  mod.rs  read.rs  write.rs
src/io/legacy/: float.rs  hash.rs  mod.rs  read.rs  scramble.rs  util.rs  write.rs
src/io/modern/: mod.rs  read.rs  write.rs
src/public/: legacy.rs  mod.rs  modern.rs
src/table/: builder.rs  cell.rs  column.rs  compat.rs  convert.rs  legacy.rs  mod.rs  modern.rs  private.rs  row.rs  util.rs
tests/: hash_tester.rs  legacy.rs  legacy_3ds.rs  legacy_wii.rs  legacy_x.rs  modern.rs
tests/common/: mod.rs
tests/res/: test_legacy_1.bdat  test_legacy_3ds_1.bdat  test_legacy_wii_1.bdat  test_legacy_x_1.bdat  test_modern_1.bdat
toolset/: Cargo.toml  README.md
toolset/src/: diff.rs  error.rs  filter.rs  hash.rs  info.rs  main.rs  scramble.rs  util.rs
toolset/src/convert/: csv.rs  json.rs  mod.rs  schema.rs
toolset/src/util/: fixed_vec.rs  hash.rs  mod.rs
