[package]
name = "bdat"
version = "0.1.0-alpha.1"
edition = "2021"
license = "mit OR apache-2.0"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
byteorder = "1.4"
thiserror = "1.0"
enum-kinds = "0.5.1"
num_enum = "0.5.7"
serde-value = { version = "0.7.0", optional = true }

[features]
serde = ["dep:serde", "serde-value"]

[dev-dependencies]
serde_json = "1.0"
