[package]
name = "bdat"
version = "0.4.0"
description = "(De)serialization library for Monolithsoft's BDAT file format"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoccoDev/bdat-rs"
keywords = ["bdat", "xenoblade", "monolithsoft", "switch", "nintendo"]
categories = ["parsing", "parser-implementations", "encoding"]
exclude = ["/.vscode", "/.github"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
byteorder = "1.4"
thiserror = "1.0"
enum-kinds = "0.5.1"
num_enum = "0.5.7"
serde-value = { version = "0.7.0", optional = true }

[features]
default = ["hash-table"]
serde = ["dep:serde", "serde-value"]
hash-table = []
bench = []

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5.1"

[[bench]]
name = "scramble"
harness = false

[[bench]]
name = "murmur"
harness = false

