[package]
name = "bdat-toolset"
version = "0.1.0"
edition = "2021"
license = "gpl-3.0"

[dependencies]
bdat = { path = "../", features = ["serde"] }
clap = { version = "4.0.8", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
walkdir = "2.3.2"
indicatif = "0.17"
rayon = "1.5.3"

[features]