[package]
name = "bdat-toolset"
authors = ["RoccoDev <hey@rocco.dev>"]
version = "0.3.0-alpha.1"
edition = "2021"
license = "gpl-3.0"

[dependencies]
bdat = { path = "../", features = ["serde"] }
clap = { version = "4.0.8", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.2"
indicatif = "0.17"
rayon = "1.5.3"
thiserror = "1.0"
itertools = "0.10"

serde_json = { version = "1.0", features = ["preserve_order"] }
csv = "1.1"

[features]

[profile.release]
lto = true
strip = true